--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <h4 id="uselesstext2">s turn</h4>
         <p id="badtext" style="float:left;"></p>
     </div>
-    <footer title="Copyright by aravindkumar" id="copyright">FOR ME</footer>
+    <footer title="Copyright by captcha" id="copyright">FOR ME</footer>
 </body>
 <h1>
     <aside>RULES</aside>
